--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"eslint-plugin-unused-imports": "^3.2.0",
 		"framer-motion": "^11.1.1",
 		"intl-messageformat": "^10.5.0",
+		"jose": "^5.3.0",
 		"mongoose": "^8.4.0",
 		"next": "14.2.3",
 		"next-themes": "^0.2.1",
