feat: Add auth api.

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,1 +1,4 @@
 MONGODB_URI='mongodb://localhost:27017/monkey?replicaSet=rs0'
+
+AUTH_SIGN_KEY='12345678901234567890123456789012'
+AUTH_ENCRYPT_KEY='12345678901234567890123456789012'
